z-index fix

--- a/assets/css/skin.css
+++ b/assets/css/skin.css
@@ -109,7 +109,7 @@ footer {
   align-items: center;
   justify-items: center;
   white-space: nowrap;
-  z-index: 1000;
+  z-index: 900;
   position: relative;
 }
 
